fix homeview layout bug

--- a/client/assets/custom.scss
+++ b/client/assets/custom.scss
@@ -423,8 +423,6 @@ html, body, #root {
 // Homeview buttons
 .homeview-btns-cont  {
   width: 100%;
-  max-height: 500px;
-  margin-bottom: 1.5em;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 0.4fr 1.3fr 1.3fr 0.4fr;
@@ -437,6 +435,7 @@ html, body, #root {
     "adaptive-test adaptive-test";
 
   @media (min-width: 900px) {
+    max-height: 500px;
     gap: 17px 17px;
     grid-template-columns: 1fr 1fr 1fr; 
     grid-template-rows: 0.3fr 1fr 1fr; 
